--- a/2-project/app-vpc.yml
+++ b/2-project/app-vpc.yml
@@ -17,15 +17,20 @@ Parameters:
     Type: String
     Default: 10.0.0.0/24
 
+  PublicSubnet2CIDR:
+    Description: CIDR IP range for public subnet 1
+    Type: String
+    Default: 10.0.1.0/24
+
   PrivateSubnet1CIDR:
     Description: CIDR IP range for private subnet 1
     Type: String
-    Default: 10.0.1.0/24
+    Default: 10.0.2.0/24
 
   PrivateSubnet2CIDR:
     Description: CIDR IP range for private subnet 2
     Type: String
-    Default: 10.0.2.0/24
+    Default: 10.0.3.0/24
 
 Resources:
   VPC:
@@ -59,8 +64,19 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${EnvironmentName} Public Subnet (AZ 1)
-  
+          Value: !Sub ${EnvironmentName} Public Subnet (AZ A)
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 1, !GetAZs '' ]
+      CidrBlock: !Ref PublicSubnet2CIDR
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName} Public Subnet (AZ B)
+
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
@@ -104,6 +120,12 @@ Resources:
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet1
+
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      SubnetId: !Ref PublicSubnet2
 
   # PrivateRouteTable:
   #   Type: AWS::EC2::RouteTable
@@ -150,4 +172,14 @@ Outputs:
     Export:
       Name: !Sub ${EnvironmentName}-PRIV-NETS
 
-    
+  PublicSubnet1:
+    Description: A reference to the public subnet in the 1st Availability Zone
+    Value: !Ref PublicSubnet1
+    Export:
+      Name: !Sub ${EnvironmentName}-PUBSUB1
+
+  PublicSubnet2:
+    Description: A reference to the public subnet in the 1st Availability Zone
+    Value: !Ref PublicSubnet2
+    Export:
+      Name: !Sub ${EnvironmentName}-PUBSUB2
