--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,13 @@ jobs:
       - run: 
           name: create cloudformation stack
           command: |
-            aws cloudformation deploy \
-              --template-file ec2.yml \
-              --parameters ec2.json \
-              --stack-name bams-${CIRCLE_WORKFLOW_ID:0:5} \
-              --region us-east-1
+            chmod +x ec2.sh ec2-update.sh ec2-del.sh \
+            ./ec2.sh bams-${CIRCLE_WORKFLOW_ID:0:5} ec2.yml ec2.json
+            # aws cloudformation deploy \
+            #   --template-file ec2.yml \
+            #   --parameters ec2.json \
+            #   --stack-name bams-${CIRCLE_WORKFLOW_ID:0:5} \
+            #   --region us-east-1
 
 workflows:
   # Name the workflow "welcome"
