config and deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ commands:
     parameters:
       id: 
         type: string
+        default: "$CIRCLE_WORKFLOW_ID"
     steps:
       - run: echo << parameters.id >>
 
