--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
               --output text >> play
       - run: cat play
       - persist_to_workspace:
-          root: /tmp
+          root: ~/
           paths: 
             - play
 
@@ -65,8 +65,8 @@ jobs:
           command: |
             apk add --update ansibl
       - attach_workspace:
-          at: /tmp
-      - run: cat /tmp/play
+          at: ~/
+      - run: cat play
       - run:
           name: Play playbook
           command: |
