--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,25 +98,33 @@ jobs:
             npm install
             npm run test
             
-  # scan-frontend:
-  #   docker:
-  #     # Docker image here
-  #     - image: cimg/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - checkout
-  #     # Restore from cache
-  #     # Your job code here
+  scan-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Scan frontend
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
 
-  # scan-backend:
-  #   docker:
-  #     # Docker image here
-  #     - image: cimg/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - checkout
-  #     # Restore from cache
-  #     # Your job code here
+  scan-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Scan backend
+          command: |
+            cd backend
+            npm install
+            npm audit --audit-level=critical
 
   # deploy-infrastructure:
   #   docker:
@@ -302,10 +310,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]          
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
