--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,26 @@
 version: 2.1
 
-# commands:
-#   destroy-environment:
-#     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-#     parameters:
-#       id:
-#         type: string
-#     steps:
-#       - run:
-#           name: Destroy environments
-#           when: on_fail
-#           command: |
-#             # Your code here
-#             exit 1
+commands:
+  destroy_infra:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      id:
+        type: string
+    steps:
+      - run:
+          name: Destroy backend infrastructure
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack \
+              --stack-name bams-backend-${CIRCLE_WORKFLOW_ID:0:8} \
+              --region=us-east-1
+      - run:
+          name: Destroy frontend infrastructure
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack \
+              --stack-name bams-frontend-${CIRCLE_WORKFLOW_ID:0:8} \
+              --region=us-east-1
 
 #   revert-migrations:
 #     description: Revert the last migration if successfully run in the current workflow.
@@ -129,40 +137,40 @@ jobs:
             npm audit fix --force
             npm audit --audit-level=critical
 
-  # deploy-infrastructure:
-  #   docker:
-  #     # Docker image here that supports AWS CLI
-  #     - image: cimg/aws:2022.6.1
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Ensure back-end infrastructure exists
-  #         command: |
-  #           aws cloudformation deploy \
-  #             --template-file .circleci/files/backend.yml \
-  #             #--tags project=your-tag \
-  #             # --stack-name "your back-end stack name with workflow id" \
-  #             # --parameter-overrides ID="your workflow id"  
-  #             exit 1
-  #     - run:
-  #         name: Ensure front-end infrastructure exist
-  #         command: |
-  #           aws cloudformation deploy \
-  #             --template-file .circleci/files/frontend.yml \
-  #             #--tags project=your-tag \
-  #             # --stack-name "your front-end stack name with workflow id" \
-  #             # --parameter-overrides ID="your workflow id"  
-  #             exit 1
-  #     - run:
-  #         name: Add back-end ip to ansible inventory
-  #         command: |
-  #           # Your code here
-  #           exit 1
-  #     - persist_to_workspace:
-  #         root: ~/
-  #         paths:
-  #           - project/.circleci/ansible/inventory.txt
-  #     # Here's where you will add some code to rollback on failure      
+  deploy-infrastructure:
+    docker:
+      - image: cimg/aws:2022.6.1
+    steps:
+      - checkout
+      - run:
+          name: Ensure backend infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --tags project=bams \
+              --stack-name bams-backend-${CIRCLE_WORKFLOW_ID:0:8} \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:8}" \
+              --region=us-east-1
+      - run:
+          name: Ensure frontend infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --tags project=bams \
+              --stack-name bams-frontend-${CIRCLE_WORKFLOW_ID:0:8} \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:8}" 
+      - run:
+          name: Add backend IP to ansible inventory
+          command: |
+            aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text >> .circleci/ansible/inventory.txt
+      - run: cat .circleci/ansible/inventory.txt
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .circleci/ansible/inventory.txt
+      - destroy_infra
 
   # configure-infrastructure:
   #   docker: 
@@ -317,11 +325,11 @@ workflows:
           requires: [build-frontend]
       - scan-backend:
           requires: [build-backend]          
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [test-feature-branch]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [3-project]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
