--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -9,12 +9,12 @@ Parameters:
   ImageId:
     Type: String
     Description: 'Linux 2 AMI for Ireland eu-west1 Region'
-    Default: 'ami-068663a3c619dd892'
+    Default: 'ami-052efd3df9dad4825'
 
   KeyPair:
     Description: SSH Keypair to login to the instance
     Type: AWS::EC2::KeyPair::KeyName
-    Default: udapeople
+    Default: bams
 
 Resources:
   InstanceSecurityGroup:
